--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body onload="onLoad();">
 <center>
-<object data="/home/rone/Downloads/al/al/1.pdf"height="780px" width="1360px"> </object>
+<object data="1.pdf" height="780px" width="1360px"> </object>
 </center>
 	
 </body></html>
