--- a/load.html
+++ b/load.html
@@ -45,6 +45,6 @@
 <body>
 <br><br><br>
 <center>
-<img src="/home/rone/Downloads/files/files/1.gif" width="720" height="1080"> </center>
+<img src="1.gif" width="720" height="1080"> </center>
 	
 </body></html>
