--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="Zimbra provides open source server and client software for messaging and collaboration. To find out more visit ">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="stylesheet" type="text/css" href="/common,login,zhtml,skin.css">
-	<link rel="SHORTCUT ICON" href="/home/rone/Downloads/al/al/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="common,login,zhtml,skin.css">
+	<link rel="SHORTCUT ICON" href="favicon.ico">
 
 
 
