--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="Zimbra provides open source server and client software for messaging and collaboration. To find out more visit ">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link rel="stylesheet" type="text/css" href="/home/rone/Downloads/al/al/common,login,zhtml,skin.css">
-	<link rel="SHORTCUT ICON" href="/home/rone/Downloads/al/al/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="common,login,zhtml,skin.css">
+	<link rel="SHORTCUT ICON" href="favicon.ico">
 
 
 
@@ -63,7 +63,7 @@
 								<input type="hidden" name="login_csrf" value="7f77dc16-2175-496d-9824-df60a1d41fde">
 <div id="ZLoginErrorPanel">
 						<table><tbody><tr>
-							<td><img src="/home/rone/Downloads/al/al/ImgCritical_32.png" title="Error" alt="Error" id="ZLoginErrorIcon">
+							<td><img src="ImgCritical_32.png" title="Error" alt="Error" id="ZLoginErrorIcon">
 </td>
 							<td>The username or password is incorrect. Verify that CAPS LOCK is not on, and then retype the current username and password.</td>
 						</tr></tbody></table>
