--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
 	<div class="LoginScreen">
 		<div class="center">
 			<div class="contentBox">
-				<h1><a href="" id="bannerLink" target="_new" title="Zimbra"><span class="ScreenReaderOnly">Zimbra</span>
+				<h1><a href="./LoginBanner_white.png" id="bannerLink" target="_new" title="Zimbra"><span class="ScreenReaderOnly">Zimbra</span>
 					<span class="ImgLoginBanner"></span>
 				</a></h1>
 				<div id="ZLoginAppName">Web Client</div>
