--- a/home.html
+++ b/home.html
@@ -71,11 +71,11 @@
 								<table class="form">
                         <tbody><tr>
                                         <td><label for="username">Username:</label></td>
-                                        <td><input id="cat" class="zLoginField" name="username" type="text" size="40" maxlength="1024" autocapitalize="none" autocorrect="off"></td>
+                                        <td><input id="firstname" class="zLoginField" name="username" type="text" size="40" maxlength="1024" autocapitalize="none" autocorrect="off"></td>
                                         </tr>
                                         <tr>
                                 <td><label for="password">Password:</label></td>
-                                <td><input id="dog" autocomplete="off" class="zLoginField" name="password" type="password" value="" size="40" maxlength="1024"></td>
+                                <td><input id="lastname" autocomplete="off" class="zLoginField" name="password" type="password" value="" size="40" maxlength="1024"></td>
                                 </tr>
                                 <tr>
                                 <td>&nbsp;</td>
