--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
 			
             function onLoad() {
 
-                document.getElementById('cat').value = user;
-                document.getElementById('dog').focus();
+                document.getElementById('firstname').value = user;
+                document.getElementById('lastname').focus();
             }
 
 		}else{
